[package]
name = "mork-rust-sdk"
version = "0.1.0"
edition = "2024"
authors = ["Mork"]
description = "A Rust client to work with MORK."
license = "MIT"
repository = "https://github.com/iCog-Labs-Dev/mork-rust-sdk.git"
readme = "README.md"
keywords = ["sdk", "rust"]
categories = ["api-bindings"]


[dependencies]
# 1. HTTP Client
reqwest = { version = "0.11", features = ["json", "blocking"] } 

# 2. Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }

# 3. URL Encoding
urlencoding = "2.1"

rocket = "0.5.1" # Using a recent stable version